--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
   "homepage": "https://github.com/mrjacoughlin/Note-Taker#readme",
   "dependencies": {
     "express": "^4.17.1",
+    "util": "^0.12.3",
     "uuid": "^8.3.2"
   }
 }
